// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Issue transaction service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "assetId": "CeFjjLBxhpj1vsF832KC6SXEHicc1a2gUJMzaAZGHUJ7",
    "decimals": 8,
    "description": "http://coremedia.info/ Harnessing the Benefits of Technology for the Good of Humanity ",
    "fee": "1",
    "height": 236967,
    "id": "CeFjjLBxhpj1vsF832KC6SXEHicc1a2gUJMzaAZGHUJ7",
    "name": "CORE",
    "quantity": "0.01",
    "reissuable": false,
    "sender": "3P7HKYe6HB8eK7uXxrztEYUSzZQyyYRnWHg",
    "senderPublicKey": "9ASL55YRs78rW5hjRAgjyWww7QqP99HwuB8dG6AqtnFm",
    "signature": "iN5XQwAAQN1ySVF7BwV8ash6sEW7b1zCH8XhYBDbqZwPMeZHQyvNJtjq46Q9VCDjPv4UV2rFCKvdyev35dTUKAX",
    "timestamp": 2016-11-18T15:31:05.875Z,
    "type": 3,
    "version": 1,
  },
}
`;

exports[`Issue transaction service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "CeFjjLBxhpj1vsF832KC6SXEHicc1a2gUJMzaAZGHUJ7",
        "decimals": 8,
        "description": "http://coremedia.info/ Harnessing the Benefits of Technology for the Good of Humanity ",
        "fee": "1",
        "height": 236967,
        "id": "CeFjjLBxhpj1vsF832KC6SXEHicc1a2gUJMzaAZGHUJ7",
        "name": "CORE",
        "quantity": "0.01",
        "reissuable": false,
        "sender": "3P7HKYe6HB8eK7uXxrztEYUSzZQyyYRnWHg",
        "senderPublicKey": "9ASL55YRs78rW5hjRAgjyWww7QqP99HwuB8dG6AqtnFm",
        "signature": "iN5XQwAAQN1ySVF7BwV8ash6sEW7b1zCH8XhYBDbqZwPMeZHQyvNJtjq46Q9VCDjPv4UV2rFCKvdyev35dTUKAX",
        "timestamp": 2016-11-18T15:31:05.875Z,
        "type": 3,
        "version": 1,
      },
    },
    null,
    Object {
      "__type": "transaction",
      "data": Object {
        "assetId": "5ZUsD93EbK1SZZa2GXYZx3SjhcXWDvMKqzWoJZjNGkW8",
        "decimals": 8,
        "description": "http://coremedia.info/ Harnessing the Benefits of Technology for the Good of Humanity ",
        "fee": "1",
        "height": 236970,
        "id": "5ZUsD93EbK1SZZa2GXYZx3SjhcXWDvMKqzWoJZjNGkW8",
        "name": "CoreMedia",
        "quantity": "0.01",
        "reissuable": false,
        "sender": "3P7HKYe6HB8eK7uXxrztEYUSzZQyyYRnWHg",
        "senderPublicKey": "9ASL55YRs78rW5hjRAgjyWww7QqP99HwuB8dG6AqtnFm",
        "signature": "MwtQXaycbwF3ZUQyZJ6f2viA7UEZx7esH8ysgc2WsLYtNKx7L7oPJ3XDLCSUebY96hfFqPYbEiWnE5gDJibf1YS",
        "timestamp": 2016-11-18T15:33:07.893Z,
        "type": 3,
        "version": 1,
      },
    },
  ],
}
`;
